# react-native-harmony-sample-package

./: .gitignore  License  README.md  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml
codegen-sample-package/: License  index.ts  package-lock.json  package.json
codegen-sample-package/harmony/: codegen_sample_package.har
codegen-sample-package/harmony/codegen_sample_package/: BuildProfile.ets  index.ets  oh-package.json5  ts.ts
codegen-sample-package/harmony/codegen_sample_package/src/main/: module.json5
codegen-sample-package/harmony/codegen_sample_package/src/main/cpp/: CMakeLists.txt  CodegenSamplePackage.cpp  CodegenSamplePackage.h  CodegenSampleViewComponentInstance.h
codegen-sample-package/src/Fabric/: IndexArkTS.tsx  IndexCAPI.tsx
codegen-sample-package/src/Fabric/specs/v1/: CodegenArkTSNativeComponent.ts
codegen-sample-package/src/Fabric/specs/v2/: CodegenCApiNativeComponent.ts
codegen-sample-package/src/TurboModule/specs/v1/: NativeGeneratedSampleTurboModule.ts
codegen-sample-package/src/TurboModule/specs/v2/: NativeGeneratedSampleTurboModule.ts
no-codegen-sample-package/: License  index.ts  package-lock.json  package.json
no-codegen-sample-package/harmony/: no_codegen_sample_package.har
no-codegen-sample-package/harmony/no_codegen_sample_package/: BuildProfile.ets  index.ets  oh-package-lock.json5  oh-package.json5  ts.ts
no-codegen-sample-package/harmony/no_codegen_sample_package/src/main/cpp/forArkTS/: CMakeLists.txt  NoCodegenArkTSSamplePackage.cpp  NoCodegenArkTSSamplePackage.h  NoCodegenSampleViewArkTSComponentDescriptor.h  NoCodegenSampleViewArkTSJSIBinder.h
no-codegen-sample-package/harmony/no_codegen_sample_package/src/main/cpp/forCAPI/: BaseCodegenSampleViewCAPIComponentInstance.h  BaseReactNativeOhTplCodegenSamplePackagePackage.h  CMakeLists.txt  NoCodegenCAPISamplePackage.cpp  NoCodegenCAPISamplePackage.h  NoCodegenSampleViewCAPIJSIBinder.h  NoCodegenSampleViewComponentInstance.h
no-codegen-sample-package/harmony/no_codegen_sample_package/src/main/cpp/forCAPI/react/renderer/components/_react_native_oh_tpl_codegen_sample_package/: ComponentDescriptors.h  EventEmitters.cpp  EventEmitters.h  Props.cpp  Props.h  ShadowNodes.cpp  ShadowNodes.h  States.h
no-codegen-sample-package/src/Fabric/: IndexArkTS.tsx  IndexCAPI.tsx
tester/: .eslintrc  .gitignore  App.tsx  babel.config.js  contexts.ts  index.js  package.json  tsconfig.json
tester/harmony/: .gitignore  build-profile.template.json5  format.ps1  oh-package.json5
tester/harmony/AppScope/: app.json5
tester/harmony/entry/: build-profile.json5  oh-package.json5
tester/harmony/entry/src/main/: module.json5
tester/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
tester/rnoh_package/: rnoh-react-native-harmony-0.72.27.tgz  rnoh-react-native-harmony-cli-0.0.26.tgz  rnoh-testerino-0.0.9.tgz
tester/scripts/: create-build-profile.js
tester/src/components/: Navigation.tsx
tester/src/testList/: CodegenTurboModuleTest.tsx  CustomNativeComponentTest.tsx  InternalTest.tsx  TurboModuleTest.tsx  codegenComponentDemo.tsx  index.tsx  noCodegenComponentDemo.tsx
(+18 files in other folders)
